--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "parcel-bundler": "^1.12.2"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "express": "^4.16.4",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
