--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "parcel public/index.html",
     "db-server": "node server/data/index.js",
+    "build": "parcel build --public-url ./dist/ public/index.html",
+    "client-server": "npm -s run build && babel-node server/client/Index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -22,6 +24,7 @@
     "express": "^4.16.4",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-router": "^4.3.1"
+    "react-router": "^4.3.1",
+    "react-router-dom": "^5.0.0"
   }
 }
