--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-cli": "^6.26.0",
     "express": "^4.16.4",
     "firebase": "^5.9.1",
+    "mongoose": "^5.4.19",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router": "^4.3.1",
