--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "firebase": "^5.9.1",
     "mongoose": "^5.4.19",
+    "morgan": "^1.9.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router": "^4.3.1",
